# ai-relay

./: CHANGELOG.md  README.md  pyproject.toml
agent_relay/: __init__.py  cli.py  relay.py
agent_relay/adapters/: __init__.py  base.py
ai_relay/: __init__.py  claude_auth.py  codex_auth.py  events.py  gemini_auth.py  per_turn.py  pty_session.py  relay.py  transports.py
ai_relay/adapters/: __init__.py  base.py  claude_code.py  codex.py  cortex.py  gemini.py  generic.py
